--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^17.3.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@types/gapi.auth2": "^0.0.60",
+    "@types/leaflet": "^1.9.12",
     "angularx-social-login": "^4.1.0",
     "gapi-script": "^1.2.0",
+    "leaflet": "^1.9.4",
     "npm": "^10.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
