--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.2.0",
     "@angular/animations": "^17.3.0",
     "@angular/cdk": "^17.3.3",
     "@angular/common": "^17.3.0",
@@ -27,12 +28,15 @@
     "@types/gapi.auth2": "^0.0.60",
     "@types/leaflet": "^1.9.12",
     "angular-oauth2-oidc": "^17.0.2",
+    "angularx-social-login": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "gapi-script": "^1.2.0",
     "leaflet": "^1.9.4",
+    "ng2-cordova-oauth": "^0.0.8",
     "npm": "^10.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "twitter-api-v2": "^1.17.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
