--- a/angular.json
+++ b/angular.json
@@ -145,6 +145,9 @@
               "devServerTarget": "app-ejemplo:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
