--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "@types/gapi.auth2": "^0.0.60",
     "@types/leaflet": "^1.9.12",
     "angular-oauth2-oidc": "^17.0.2",
-    "angularx-social-login": "^4.1.0",
+    "apexcharts": "^3.49.1",
     "bcryptjs": "^2.4.3",
     "gapi-script": "^1.2.0",
     "leaflet": "^1.9.4",
+    "ng-apexcharts": "^1.10.0",
     "ng2-cordova-oauth": "^0.0.8",
     "npm": "^10.7.0",
     "rxjs": "~7.8.0",
