--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jasmine": "~5.1.0",
     "cypress": "latest",
+    "jasmine": "^5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
