--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@types/gapi.auth2": "^0.0.60",
     "@types/leaflet": "^1.9.12",
+    "angular-cli-ghpages": "^2.0.0",
     "angular-oauth2-oidc": "^17.0.2",
     "apexcharts": "^3.49.1",
     "bcryptjs": "^2.4.3",
