Añadidos comentarios a funciones

--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "apexcharts": "^3.49.1",
     "bcryptjs": "^2.4.3",
     "gapi-script": "^1.2.0",
+    "glob": "^10.4.1",
     "leaflet": "^1.9.4",
     "ng-apexcharts": "^1.10.0",
     "ng2-cordova-oauth": "^0.0.8",
-    "ngx-cookie-service": "^17.0.0",
+    "ngx-cookie-service": "^17.1.0",
     "npm": "^10.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
